--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-screens": "~3.15.0",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.18.7",
+    "react-native-webview": "11.23.0",
     "react-redux": "^8.0.2",
     "redux-persist": "^6.0.0"
   },
