--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "expo": "~46.0.7",
     "expo-asset": "~8.6.1",
     "expo-constants": "~13.2.3",
+    "expo-device": "~4.3.0",
     "expo-font": "~10.2.0",
     "expo-linking": "~3.2.2",
+    "expo-notifications": "~0.16.1",
     "expo-splash-screen": "~0.16.1",
     "expo-status-bar": "~1.4.0",
     "expo-system-ui": "~1.3.0",
