--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-device": "~4.3.0",
     "expo-font": "~10.2.0",
     "expo-linking": "~3.2.2",
+    "expo-location": "~14.3.0",
     "expo-notifications": "~0.16.1",
     "expo-splash-screen": "~0.16.1",
     "expo-status-bar": "~1.4.0",
@@ -37,6 +38,7 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-maps": "0.31.1",
     "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
