--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "thinkfood_expo",
-    "slug": "thinkfood_expo",
+    "name": "ThinkFood",
+    "slug": "thinkfood",
     "version": "1.0.10",
     "orientation": "portrait",
     "icon": "./assets/images/logo/thinkfoodlogo.png",
