--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "thinkfood_expo",
+    "name": "ThinkFood",
     "slug": "thinkfood_expo",
-    "version": "1.0.11",
+    "version": "1.0.14",
     "orientation": "portrait",
     "icon": "./assets/images/logo/thinkfoodlogo.png",
     "scheme": "myapp",
@@ -28,7 +28,7 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.thinkfood.user",
-      "buildNumber": "15"
+      "buildNumber": "18"
     },
     "android": {
       "adaptiveIcon": {
@@ -36,7 +36,7 @@
         "backgroundColor": "#ffffff"
       },
       "package": "com.thinkfood.user",
-      "versionCode": 4,
+      "versionCode": 6,
       "googleServicesFile": "./google-services.json"
     },
     "web": {
