--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.18.7",
     "react-native-webview": "11.23.0",
+    "react-native-youtube": "^2.0.2",
     "react-redux": "^8.0.2",
     "redux-persist": "^6.0.0"
   },
